Adding the bones of the code

--- a/index.html
+++ b/index.html
@@ -3,11 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./assets/css/reset.css">
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Document</title>
+    <title>Josue Feliciano | Portfolio</title>
 </head>
 <body>
     <!-- Create section for my name, a recent Photo, add links -->
+    <header>
+        <h1>Josue Feliciano</h1>
+        <nav>
+            <ul>
+                <li>
+                    <a href="#about-me">About Me</a>
+                </li>
+                <li>
+                    <a href="#work">Work</a>
+                </li>
+                <li>
+                    <a href="#contact-me">Contact Me</a>
+                </li>
+                <li>
+                    <a href="#resume">Resume</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+    <figure class="hero">Welcome!</figure>
+    <article>
     
+    </article>
 </body>
 </html>
