--- a/index.html
+++ b/index.html
@@ -28,9 +28,28 @@
             </ul>
         </nav>
     </header>
-    <figure class="hero">Welcome!</figure>
-    <article>
-    
+    <figure class="hero">
+        <h2>Welcome!</h2>
+    </figure>
+    <article class="content">
+        <section class="about-me">
+            <figure>
+                <img src="./assets/images/02-portfolio-4.jpg" class="float-left" />
+                <h1>Search Engine Optimization</h1>
+            </figure>
+        </section>
+        <section id="work" class="online-reputation-management">
+            <img src="./assets/images/02-portfolio-1.jpg" class="float-right" />
+            <h1>Online Reputation Management</h1>
+        </section>
+        <section id="contact-me" class="social-media-marketing">
+            <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
+            <h2>Social Media Marketing</h2>
+        </section>
+        <section id="resume">
+            <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
+            <h2></h2>
+        </section>
     </article>
 </body>
 </html>
